--- a/ubiquity/chrome/locale/it-IT/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/it-IT/aboutubiquity.properties
@@ -9,6 +9,7 @@ ubiquity.nav.settings=Impostazioni
 ubiquity.nav.commands=Comandi disponibili
 ubiquity.nav.getnewcommands=Ottieni nuovi comandi
 ubiquity.nav.support=Guida
+ubiquity.nav.hackubiquity=Hack Ubiquity
 #
 
 #
@@ -25,6 +26,7 @@ ubiquity.nav.support=Guida
 
 #
 
+ubiquity.showhidehelp.hide=Nascondi aiuto
 #
 
 #
@@ -35,6 +37,7 @@ ubiquity.nav.support=Guida
 
 #
 
+ubiquity.prefkeys.notifybadmodifier=È necessario utilizzare un modificatore, come Alt, Control, Maiusc o Meta.
 ubiquity.prefkeys.clickhere=Fare click qui per modificare
 ubiquity.prefkeys.confirmchange=La scorciatoia è stata cambiata in:
 #
@@ -46,6 +49,20 @@ ubiquity.prefkeys.pressyourcombo=Premere la propria combinazione di tasti.
 
 #
 
+ubiquity.cmdlist.unsubscribefeed=Dismetti
+ubiquity.cmdlist.feedupdated=È disponibile un aggiornamento per questo feed.
+ubiquity.cmdlist.viewsource=Visualizza sorgente
+ubiquity.cmdlist.viewfeedsource=Visualizza il sorgente aggiornato
+ubiquity.cmdlist.localetemplate=Ottieni il modello per la localizzazione
+ubiquity.cmdlist.synonyms=chiamato anche %S
+ubiquity.cmdlist.createdby=di %S
+ubiquity.cmdlist.license=distribuito con licenza %S
+ubiquity.cmdlist.contributions=Hanno contribuito:
+ubiquity.cmdlist.homepage=homepage
+ubiquity.cmdlist.viewmoreinfo=Per maggiori informazioni visitare %S
+ubiquity.cmdlist.oldparsertitle=Questo comando non è stato caricato perchè incompatibile con Parser 2.
+ubiquity.cmdlist.resubscribe=Risottoscrivi
+ubiquity.cmdlist.purge=Purga
 #
 
 #
