--- a/ubiquity/chrome/locale/ja/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/ja/aboutubiquity.properties
@@ -59,7 +59,7 @@ ubiquity.cmdlist.synonyms=別名: %S
 ubiquity.cmdlist.createdby=作者: %S
 ubiquity.cmdlist.license=ライセンス: %S
 ubiquity.cmdlist.contributions=貢献者: %S
-ubiquity.cmdlist.homepage=ホームページ: %S
+ubiquity.cmdlist.homepage=ホームページ
 ubiquity.cmdlist.viewmoreinfo=詳細情報: %S
 ubiquity.cmdlist.oldparsertitle=このコマンドは Parser 2 と互換性がないため読み込まれません。
 ubiquity.cmdlist.resubscribe=利用再開
