--- a/ubiquity/chrome/locale/pt-BR/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/pt-BR/aboutubiquitytutorial.properties
@@ -1,9 +1,9 @@
 # ##### Tutorial start page
 
-tutorial.welcome=Welcome to the Ubiquity Tutorial.
-tutorial.fromthestart=Click Here to Start From The Beginning
-tutorial.fromthemiddle=Start from the middle:
-tutorial.howtostart=How to start Ubiquity
+tutorial.welcome=Bem-vindo ao Tutorial do Ubiquity.
+tutorial.fromthestart=Clique aqui para começar do início
+tutorial.fromthemiddle=Conteúdo:
+tutorial.howtostart=Como iniciar o Ubiquity
 tutorial.previews=Previews (Weather command)
 tutorial.suggestions=The Suggestion List (Calculate, Google)
 tutorial.selecting=Selecting, Executing (Translate, Map)
@@ -28,12 +28,12 @@ tutorial.stage03p2=(Remember, <strong>hold down the
 tutorial.stage04p1=Now type the word <strong>weather</strong>...
 ##### Stage 05
 
-tutorial.stage05p1=Even before you're done typing, the <strong>preview area</strong> shows a preview of the results of your command &#8212; in this case, a weather report.
+tutorial.stage05p1=Even before you're done typing, the <strong>preview area</strong> shows a preview of the results of your command — in this case, a weather report.
 tutorial.stage05p2=If you don't enter a location, the <em>weather</em> command takes a guess as to where you are.
 tutorial.stage05p3=Now let's give it a location: <strong>type a space, and then type 'near chicago'</strong>. (So your whole input will say: 'weather near chicago'.)
 ##### Stage 06
 
-tutorial.stage06p1=See how that works?  Feel free to delete &quot;chicago&quot; and try some other locations.
+tutorial.stage06p1=See how that works?  Feel free to delete "chicago" and try some other locations.
 tutorial.stage06p2=When you're done checking the weather, <strong>hit the escape key.</strong>
 ##### Stage 07 (part 3 of 6) #####
 
