--- a/ubiquity/chrome/locale/pt-BR/coreubiquity.properties
+++ b/ubiquity/chrome/locale/pt-BR/coreubiquity.properties
@@ -1,7 +1,9 @@
+extensions.ubiquity@labs.mozilla.com.description=Uma extensão que permite o uso de comandos dinâmicos no Firefox.
 # This file is just a placeholder for localizations to core Ubiquity
 
 #
 
+ubiquity.cmdmanager.defaulthelp=Digite o nome de um comando e pressione enter para executá-lo, ou <strong>ajuda</strong> para assistência.
 #
 
 #
