moving ubiquity.msgservice.msgtitle from the hunt file to core as ubiquity.msgservice.defaultmsgtitle to core properties.

--- a/ubiquity/chrome/locale/en-US/coreubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/coreubiquity.properties
@@ -22,6 +22,11 @@ ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If yo
 ubiquity.feedmanager.subscribe=Subscribe...
 
 ############################
+# /modules/msgservice.js
+
+ubiquity.msgservice.defaultmsgtitle=Ubiquity Notification
+
+############################
 # /modules/skinsvc.js
 
 ubiquity.skinsvc.saveyourskin=Save Your Skin
