toolbarbutton: s/toggle/open/ # for now

--- a/ubiquity/chrome/locale/en-US/coreubiquity.dtd
+++ b/ubiquity/chrome/locale/en-US/coreubiquity.dtd
@@ -1,2 +1,2 @@
 <!-- chrome/content/browser.xul -->
-<!ENTITY ubiquity.toolbar.tooltip "Open or close Ubiquity">
+<!ENTITY ubiquity.toolbar.tooltip "Open Ubiquity">
